--- a/src/app/app-navigation/app-navigation.component.html
+++ b/src/app/app-navigation/app-navigation.component.html
@@ -22,7 +22,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>InventoryMangementApp</span>
+      <span>Hotel Inventory Mangement App</span>
     </mat-toolbar>
     <!-- Add Content Here -->
     <router-outlet></router-outlet>
