--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,5 +30,5 @@
 
 <!-- <a [routerLink]="'rooms'">Rooms</a>&nbsp;
 <a [routerLink]="'employees'">Employees</a> -->
-<app-app-navigation></app-app-navigation>
+<!-- <app-app-navigation></app-app-navigation> -->
 <router-outlet></router-outlet>
