Rooms component UI changes

--- a/src/app/rooms/rooms-list/rooms-list.component.html
+++ b/src/app/rooms/rooms-list/rooms-list.component.html
@@ -1,6 +1,6 @@
 <!-- <p>rooms-list works!</p> -->
 
-<div>
+<div class="container">
     <table class="table">
         <tr>
             <th>Index</th>
