--- a/src/app/rooms/rooms.component.scss
+++ b/src/app/rooms/rooms.component.scss
@@ -7,3 +7,11 @@
     background-color: tomato;
     color: white;
 }
+
+.content-class{
+    display: flexbox;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    padding : 0px;
+}
