--- a/src/app/app-navigation/app-navigation.component.html
+++ b/src/app/app-navigation/app-navigation.component.html
@@ -5,9 +5,9 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="rooms">Rooms</a>
-      <a mat-list-item routerLink="employees">Employees</a>
-      <a mat-list-item routerLink="/rooms/add">Add Room</a>
+      <a mat-list-item routerLink="/rooms">Rooms</a>
+      <a mat-list-item routerLink="/employees">Employees</a>
+      <!-- <a mat-list-item routerLink="/rooms/add">Add Room</a> -->
       <a mat-list-item routerLink="/booking">Booking</a>
       <a mat-list-item routerLink="/comment">Comments</a>
     </mat-nav-list>
